docker updates
